added: example messages and val_accuracy vs accuracy graph for dnn

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -192,6 +192,138 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1aaaba0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_example(example_message: str) -> None:\n",
+    "    \"\"\"Predict if example message is spam or ham.\"\"\"\n",
+    "    clean_example = clean_message(example_message)\n",
+    "    example_vector = vectorizer.transform([example_message])\n",
+    "    proba_spam = clf.predict_proba(example_vector)[0][1]\n",
+    "    prediction = proba_spam >= 0.5\n",
+    "    pred_label = \"Spam\" if prediction else \"Ham\"\n",
+    "\n",
+    "    print(f\"Message: {example_message.strip()}\")\n",
+    "    print(f\"Cleaned tokens: {clean_example}\")\n",
+    "    print(f\"Predicted class: {pred_label} (probability={proba_spam:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5ce4571f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: Dear Nayan,\n",
+      "\n",
+      "Tomorrow is the last day to complete your student evaluations of teaching.\n",
+      "\n",
+      "Enhancing the student experience requires your confidential feedback for the course(s) in which you are enrolled\n",
+      "\n",
+      "Please complete your course evaluations today!\n",
+      "\n",
+      "IT-371-001-Applied AI for IT (Sharmin Sultana) (Open)\n",
+      "Due Date: Monday, December 8, 2025 11:59 PM\n",
+      "\n",
+      "You can also access your evaluation(s) via Canvas or via the Blue website using the following link:\n",
+      "\n",
+      "https://my-gmu.bluera.com/\n",
+      "\n",
+      "The information you provide is very important. The summary results from evaluations are used to assess both curricular and instructional quality and to identify opportunities for improvement.\n",
+      "\n",
+      "Your participation is truly appreciated. If you require assistance or have any questions please contact the Office of Institutional Effectiveness and Planning at oiepset@gmu.edu.\n",
+      "Cleaned tokens: ['tomorrow', 'last', 'complet', 'student', 'evalu', 'teach', 'enhanc', 'student', 'experi', 'requir', 'confidenti', 'feedback', 'cours', 'enrol', 'pleas', 'complet', 'cours', 'evalu', 'today', 'open', 'due', 'date', 'access', 'evalu', 'canva', 'use', 'follow', 'inform', 'provid', 'import', 'summari', 'result', 'evalu', 'use', 'assess', 'curricular', 'instruct', 'qualiti', 'identifi', 'opportun', 'improv', 'particip', 'truli', 'appreci', 'requir', 'assist', 'question', 'pleas', 'contact', 'offic', 'institut', 'effect', 'plan']\n",
+      "Predicted class: Ham (probability=0.0000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_example(\"\"\"\n",
+    "Dear Nayan,\n",
+    "\n",
+    "Tomorrow is the last day to complete your student evaluations of teaching.\n",
+    "\n",
+    "Enhancing the student experience requires your confidential feedback for the course(s) in which you are enrolled\n",
+    "\n",
+    "Please complete your course evaluations today!\n",
+    "\n",
+    "IT-371-001-Applied AI for IT (Sharmin Sultana) (Open)\n",
+    "Due Date: Monday, December 8, 2025 11:59 PM\n",
+    "\n",
+    "You can also access your evaluation(s) via Canvas or via the Blue website using the following link:\n",
+    "\n",
+    "https://my-gmu.bluera.com/\n",
+    "\n",
+    "The information you provide is very important. The summary results from evaluations are used to assess both curricular and instructional quality and to identify opportunities for improvement.\n",
+    "\n",
+    "Your participation is truly appreciated. If you require assistance or have any questions please contact the Office of Institutional Effectiveness and Planning at oiepset@gmu.edu.\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f6310fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: Dear user,\n",
+      "\n",
+      "We attempted to renew your Cloud+ subscription, but your payment method has expired. As a result, your personal data is now at risk of being permanently removed from cloud.\n",
+      "\n",
+      "What you could lose:\n",
+      "\n",
+      "    Photos and videos stored in Cloud Photos\n",
+      "    Contacts, calendars, and reminders\n",
+      "    Notes, documents, and app data\n",
+      "    Device backups (iPhone, iPad, Mac)\n",
+      "\n",
+      "ℹ️ Final Reminder:\n",
+      "Your data will be deleted if no action is taken by Tuesday, Nov 18 2025.\n",
+      "\n",
+      "To prevent data loss, please update your payment information immediately and continue enjoying seamless access to your files across all Apple devices.\n",
+      "Update Payment & Secure My Data\n",
+      "Thank you for choosing Cloud.\n",
+      "— The Cloud Support Team\n",
+      "Cleaned tokens: ['user', 'attempt', 'renew', 'subscript', 'payment', 'expir', 'result', 'person', 'risk', 'perman', 'remov', 'could', 'photo', 'video', 'store', 'photo', 'contact', 'calendar', 'remind', 'note', 'document', 'devic', 'backup', 'final', 'remind', 'delet', 'action', 'taken', 'prevent', 'pleas', 'updat', 'payment', 'inform', 'immedi', 'continu', 'enjoy', 'seamless', 'access', 'across', 'devic', 'updat', 'payment', 'secur', 'thank', 'choos', 'support', 'team']\n",
+      "Predicted class: Spam (probability=0.9653)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_example(\"\"\"\n",
+    "Dear user,\n",
+    "\n",
+    "We attempted to renew your Cloud+ subscription, but your payment method has expired. As a result, your personal data is now at risk of being permanently removed from cloud.\n",
+    "\n",
+    "What you could lose:\n",
+    "\n",
+    "    Photos and videos stored in Cloud Photos\n",
+    "    Contacts, calendars, and reminders\n",
+    "    Notes, documents, and app data\n",
+    "    Device backups (iPhone, iPad, Mac)\n",
+    "\n",
+    "ℹ️ Final Reminder:\n",
+    "Your data will be deleted if no action is taken by Tuesday, Nov 18 2025.\n",
+    "\n",
+    "To prevent data loss, please update your payment information immediately and continue enjoying seamless access to your files across all Apple devices.\n",
+    "Update Payment & Secure My Data\n",
+    "Thank you for choosing Cloud.\n",
+    "— The Cloud Support Team\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
