--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "432a2ef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lateridiot/IT-371/Project/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-12-07 22:20:35.896744: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-07 22:20:36.102044: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-12-07 22:20:35.016649: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from typing import Any, Dict\n",
@@ -24,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "101e277a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "78b3161d",
    "metadata": {},
    "outputs": [
@@ -51,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded tokenizer from base checkpoint: distilbert-base-uncased\n"
+      "Loaded tokenizer from spam-transformer-checkpoints/final\n"
      ]
     }
    ],
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "7058f7d6",
    "metadata": {},
    "outputs": [
@@ -102,9 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2 - loss: 0.0505\n",
-      "Epoch 2/2 - loss: 0.0125\n",
-      "Saved fine-tuned checkpoint to spam-transformer-checkpoints/final\n"
+      "Checkpoint already exists at spam-transformer-checkpoints/final; skipping training.\n"
      ]
     }
    ],
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "216a750b",
    "metadata": {},
    "outputs": [
@@ -206,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +265,155 @@
     "fig.colorbar(im, ax=ax, fraction=0.046, pad=0.04)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ddade001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reusable single-message inference helper\n",
+    "def predict_example(example_message: str) -> tuple[str, float]:\n",
+    "    \"\"\"Return predicted label ('Ham'/'Spam') and spam probability for a message.\"\"\"\n",
+    "    global fine_tuned_model\n",
+    "    if 'fine_tuned_model' not in globals():\n",
+    "        if not checkpoint_dir.exists():\n",
+    "            raise RuntimeError('Checkpoint not found. Run training first or point checkpoint_dir to a saved model.')\n",
+    "        fine_tuned_model = AutoModelForSequenceClassification.from_pretrained(checkpoint_dir).to(device)\n",
+    "    fine_tuned_model.eval()\n",
+    "\n",
+    "    inputs = tokenizer(\n",
+    "        example_message,\n",
+    "        return_tensors='pt',\n",
+    "        truncation=True,\n",
+    "        max_length=256,\n",
+    "    )\n",
+    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        logits = fine_tuned_model(**inputs).logits\n",
+    "        probs = logits.softmax(dim=-1).squeeze()\n",
+    "        spam_prob = float(probs[label2id['Spam']])\n",
+    "        pred_label = id2label[int(probs.argmax())]\n",
+    "    \n",
+    "    print(f\"Message: {example_message}\")\n",
+    "    print(f\"Predicted class: {pred_label} (spam probability={spam_prob:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3a569270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: \n",
+      "Dear Nayan,\n",
+      "\n",
+      "Tomorrow is the last day to complete your student evaluations of teaching.\n",
+      "\n",
+      "Enhancing the student experience requires your confidential feedback for the course(s) in which you are enrolled\n",
+      "\n",
+      "Please complete your course evaluations today!\n",
+      "\n",
+      "IT-371-001-Applied AI for IT (Sharmin Sultana) (Open)\n",
+      "Due Date: Monday, December 8, 2025 11:59 PM\n",
+      "\n",
+      "You can also access your evaluation(s) via Canvas or via the Blue website using the following link:\n",
+      "\n",
+      "https://my-gmu.bluera.com/\n",
+      "\n",
+      "The information you provide is very important. The summary results from evaluations are used to assess both curricular and instructional quality and to identify opportunities for improvement.\n",
+      "\n",
+      "Your participation is truly appreciated. If you require assistance or have any questions please contact the Office of Institutional Effectiveness and Planning at oiepset@gmu.edu.\n",
+      "\n",
+      "Predicted class: Ham (spam probability=0.1240)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_example(\"\"\"\n",
+    "Dear Nayan,\n",
+    "\n",
+    "Tomorrow is the last day to complete your student evaluations of teaching.\n",
+    "\n",
+    "Enhancing the student experience requires your confidential feedback for the course(s) in which you are enrolled\n",
+    "\n",
+    "Please complete your course evaluations today!\n",
+    "\n",
+    "IT-371-001-Applied AI for IT (Sharmin Sultana) (Open)\n",
+    "Due Date: Monday, December 8, 2025 11:59 PM\n",
+    "\n",
+    "You can also access your evaluation(s) via Canvas or via the Blue website using the following link:\n",
+    "\n",
+    "https://my-gmu.bluera.com/\n",
+    "\n",
+    "The information you provide is very important. The summary results from evaluations are used to assess both curricular and instructional quality and to identify opportunities for improvement.\n",
+    "\n",
+    "Your participation is truly appreciated. If you require assistance or have any questions please contact the Office of Institutional Effectiveness and Planning at oiepset@gmu.edu.\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "33732547",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: \n",
+      "Dear user,\n",
+      "\n",
+      "We attempted to renew your Cloud+ subscription, but your payment method has expired. As a result, your personal data is now at risk of being permanently removed from cloud.\n",
+      "\n",
+      "What you could lose:\n",
+      "\n",
+      "    Photos and videos stored in Cloud Photos\n",
+      "    Contacts, calendars, and reminders\n",
+      "    Notes, documents, and app data\n",
+      "    Device backups (iPhone, iPad, Mac)\n",
+      "\n",
+      "ℹ️ Final Reminder:\n",
+      "Your data will be deleted if no action is taken by Tuesday, Nov 18 2025.\n",
+      "\n",
+      "To prevent data loss, please update your payment information immediately and continue enjoying seamless access to your files across all Apple devices.\n",
+      "Update Payment & Secure My Data\n",
+      "Thank you for choosing Cloud.\n",
+      "— The Cloud Support Team\n",
+      "\n",
+      "Predicted class: Spam (spam probability=0.9976)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_example(\"\"\"\n",
+    "Dear user,\n",
+    "\n",
+    "We attempted to renew your Cloud+ subscription, but your payment method has expired. As a result, your personal data is now at risk of being permanently removed from cloud.\n",
+    "\n",
+    "What you could lose:\n",
+    "\n",
+    "    Photos and videos stored in Cloud Photos\n",
+    "    Contacts, calendars, and reminders\n",
+    "    Notes, documents, and app data\n",
+    "    Device backups (iPhone, iPad, Mac)\n",
+    "\n",
+    "ℹ️ Final Reminder:\n",
+    "Your data will be deleted if no action is taken by Tuesday, Nov 18 2025.\n",
+    "\n",
+    "To prevent data loss, please update your payment information immediately and continue enjoying seamless access to your files across all Apple devices.\n",
+    "Update Payment & Secure My Data\n",
+    "Thank you for choosing Cloud.\n",
+    "— The Cloud Support Team\n",
+    "\"\"\")"
    ]
   }
  ],
